- Fixed a scoring bug with the large blue goal - Fixed bug with adjusting capacity client-side as Tool card is claimed - Fixed bug with revealing face down cards at game end - Made opponent name more legible in ultra wide layout

--- a/bonsai.css
+++ b/bonsai.css
@@ -384,6 +384,7 @@ body {
 
 #bon_opponents .bon_player {
     background-color: rgba(255, 255, 255, .25);
+    border-radius: 1rem;
 }
 #bon_opponents .bon_tree-host {
     margin-top: 0em;
@@ -1202,6 +1203,11 @@ body {
         grid-area: player;
     }
 
+    .bon_player-name {
+        font-size: 1.25rem;
+        margin-top: 0;
+    }
+    
     #bon_opponents {
         grid-area: others;
         font-size: .5em;
